Update networks and train

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "dbe8b299",
+   "metadata": {},
+   "source": [
+    "https://towardsdatascience.com/cifar-100-transfer-learning-using-efficientnet-ed3ed7b89af2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "78ef186d",
