--- a/Test Top10.ipynb
+++ b/Test Top10.ipynb
@@ -47,7 +47,9 @@
     "\n",
     "MODELS = [\"food-seg-103-xception\", \"food-seg-103-densenet121\", \"food-seg-103-densenet201\"]\n",
     "CHECKPOINT_PATHS = [\"checkpoints/\" + MODEL + \".h5\" for MODEL in MODELS]\n",
-    "MODEL_PATHS = [\"models/\" + MODEL + \".h5\" for MODEL in MODELS]"
+    "MODEL_PATHS = [\"models/\" + MODEL + \".h5\" for MODEL in MODELS]\n",
+    "\n",
+    "IMAGE_SIZE = 512"
    ]
   },
   {
@@ -124,7 +126,7 @@
     "    TEST_TOP10_PATH,\n",
     "    batch_size=1,\n",
     "    shuffle=False,\n",
-    "    target_size=(512, 512),\n",
+    "    target_size=(IMAGE_SIZE, IMAGE_SIZE),\n",
     "    class_mode=\"categorical\")\n",
     "filenames = test_data.filenames"
    ]
@@ -201,7 +203,7 @@
     "        for i, filepath in enumerate(test_data.filepaths):\n",
     "            pbar.set_description(\"Predicting: %d\" % (1 + i))\n",
     "            pbar.update(1)\n",
-    "            test_image = load_img(filepath, target_size=(512, 512))\n",
+    "            test_image = load_img(filepath, target_size=(IMAGE_SIZE, IMAGE_SIZE))\n",
     "            test_image_array = img_to_array(test_image)\n",
     "            test_image_array = np.expand_dims(test_image_array, axis=0)\n",
     "            test_image_array = test_image_array / 255.\n",
@@ -634,7 +636,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
