--- a/Inference.ipynb
+++ b/Inference.ipynb
@@ -35,6 +35,7 @@
     "CHECKPOINT_PATHS = [\"checkpoints/\" + MODEL + \".h5\" for MODEL in MODELS]\n",
     "MODEL_PATHS = [\"models/\" + MODEL + \".h5\" for MODEL in MODELS]\n",
     "\n",
+    "IMAGE_SIZE = 512\n",
     "TOP_N = 5"
    ]
   },
@@ -92,7 +93,7 @@
    "outputs": [],
    "source": [
     "def predict(model, filepath, top_n=1):\n",
-    "    test_image = load_img(filepath, target_size=(512, 512))\n",
+    "    test_image = load_img(filepath, target_size=(IMAGE_SIZE, IMAGE_SIZE))\n",
     "    test_image_array = img_to_array(test_image)\n",
     "    test_image_array = np.expand_dims(test_image_array, axis=0)\n",
     "    test_image_array = test_image_array / 255.\n",
@@ -123,7 +124,7 @@
     "                    prediction[categories[predicted_labels[i]]] = predicted_scores[i]\n",
     "            else:\n",
     "                prediction[categories[predicted_labels[i]]] = predicted_scores[i]\n",
-    "    prediction = dict(sorted(prediction.items(), key=lambda item : item[1], reverse=True)[:top_n])\n",
+    "    prediction = dict(sorted(prediction.items(), key=lambda item: item[1], reverse=True)[:top_n])\n",
     "    return prediction"
    ]
   },
@@ -167,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
